aks/fr8/fr8customerapi.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: fr8customerapi
  labels:
    app: fr8-customerapi
spec:
  replicas: 1
  selector:
    matchLabels:
      service: fr8customerapi
  template:
    metadata:
      labels:
        app: fr8-customerapi
        service: fr8customerapi
    spec:
      containers:
        - name: fr8customerapi
          image: yuvak7/fr8customerapi:v2
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 80
              protocol: TCP
---
apiVersion: v1
kind: Service
metadata:
  name: fr8customerapi
  labels:
    app: fr8-customerapi
    service: fr8customerapi
spec:
  type: ClusterIP
  ports:
    - port: 80
  selector:
    service: fr8customerapi
