aks/fr8/fr8taxapi.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: fr8taxapi
  labels:
    app: fr8-taxapi
spec:
  replicas: 1
  selector:
    matchLabels:
      service: fr8taxapi
  template:
    metadata:
      labels:
        app: fr8-taxapi
        service: fr8taxapi
    spec:
      containers:
        - name: fr8taxapi
          image: fr8imgrepo.azurecr.io/fr8taxapi:v3
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 80
              protocol: TCP
---
apiVersion: v1
kind: Service
metadata:
  name: fr8taxapi
  labels:
    app: fr8-taxapi
    service: fr8taxapi
spec:
  type: ClusterIP
  ports:
    - port: 80
  selector:
    service: fr8taxapi
