aks/fr8/fr8web.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: fr8web
  labels:
    app: fr8-web
spec:
  replicas: 1
  selector:
    matchLabels:
      service: fr8web
  template:
    metadata:
      labels:
        app: fr8-web
        service: fr8web
    spec:
      containers:
        - name: fr8web
          image: fr8imgrepo.azurecr.io/fr8web:v3
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 80
              protocol: TCP
---
apiVersion: v1
kind: Service
metadata:
  name: fr8web
  labels:
    app: fr8-web
    service: fr8web
spec:
  type: LoadBalancer
  ports:
    - port: 80
      protocol: TCP
  selector:
    service: fr8web
